<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   >
    <ImageView
        android:id="@+id/imageViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/big_logo2"
        android:paddingTop="20dip"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewGroup">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textGroup"
            android:text="@string/title_about_us"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup2"
                android:text="@string/content_about_us"
                android:layout_below="@+id/textGroup"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup3"
                android:text="@string/title_vision"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_below="@+id/textGroup2"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup4"
                android:text="@string/content_vision"
                android:layout_below="@+id/textGroup3"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup5"
                android:text="@string/title_mission"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_below="@+id/textGroup4"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup6"
                android:text="@string/content_mission"
                android:layout_below="@+id/textGroup5"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup7"
                android:text="@string/title_history"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_below="@+id/textGroup6"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textGroup8"
                android:text="@string/content_history"
                android:layout_below="@+id/textGroup7"
                android:textSize="25sp"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>